@@ -621,7 +621,7 @@ SEXP attribute_hidden do_classgets(SEXP call, SEXP op, SEXP args, SEXP env)
     checkArity(op, args);
     // have 2 args: check1arg(args, call, "x");
 
-    if (MAYBE_SHARED(CAR(args)))
+    if (MAYBE_SHARED(CAR(args)) || ((!IS_ASSIGNMENT_CALL(call)) && MAYBE_REFERENCED(CAR(args))))
         SETCAR(args, shallow_duplicate(CAR(args)));
     if (length(CADR(args)) == 0)
         SETCADR(args, R_NilValue);
@@ -970,7 +970,7 @@ SEXP attribute_hidden do_namesgets(SEXP call, SEXP op, SEXP args, SEXP env)
     if (CADR(args) == R_NilValue && getAttrib(CAR(args), R_NamesSymbol) == R_NilValue)
         return CAR(args);
     PROTECT(args = ans);
-    if (MAYBE_SHARED(CAR(args)))
+    if (MAYBE_SHARED(CAR(args)) || ((!IS_ASSIGNMENT_CALL(call)) && MAYBE_REFERENCED(CAR(args))))
         SETCAR(args, R_shallow_duplicate_attr(CAR(args)));
     if (TYPEOF(CAR(args)) == S4SXP)
     {
@@ -1108,7 +1108,7 @@ SEXP attribute_hidden do_dimnamesgets(SEXP call, SEXP op, SEXP args, SEXP env)
     if (DispatchOrEval(call, op, "dimnames<-", args, env, &ans, 0, 1))
         return (ans);
     PROTECT(args = ans);
-    if (MAYBE_SHARED(CAR(args)))
+    if (MAYBE_SHARED(CAR(args)) || ((!IS_ASSIGNMENT_CALL(call)) && MAYBE_REFERENCED(CAR(args))))
         SETCAR(args, R_shallow_duplicate_attr(CAR(args)));
     setAttrib(CAR(args), R_DimNamesSymbol, CADR(args));
     UNPROTECT(1);
@@ -1262,7 +1262,7 @@ SEXP attribute_hidden do_dimgets(SEXP call, SEXP op, SEXP args, SEXP env)
             return x;
     }
     PROTECT(args = ans);
-    if (MAYBE_SHARED(x))
+    if (MAYBE_SHARED(x) || ((!IS_ASSIGNMENT_CALL(call)) && MAYBE_REFERENCED(x)))
         SETCAR(args, x = shallow_duplicate(x));
     setAttrib(x, R_DimSymbol, CADR(args));
     setAttrib(x, R_NamesSymbol, R_NilValue);
@@ -1387,7 +1387,7 @@ SEXP attribute_hidden do_levelsgets(SEXP call, SEXP op, SEXP args, SEXP env)
     if (!isNull(CADR(args)) && any_duplicated(CADR(args), FALSE))
         errorcall(call, _("factor level [%d] is duplicated"), any_duplicated(CADR(args), FALSE));
     args = ans;
-    if (MAYBE_SHARED(CAR(args)))
+    if (MAYBE_SHARED(CAR(args)) || ((!IS_ASSIGNMENT_CALL(call)) && MAYBE_REFERENCED(CAR(args))))
         SETCAR(args, duplicate(CAR(args)));
     setAttrib(CAR(args), R_LevelsSymbol, CADR(args));
     UNPROTECT(1);
@@ -1443,7 +1443,8 @@ SEXP attribute_hidden do_attributesgets(SEXP call, SEXP op, SEXP args, SEXP env)
            As from R 2.7.0 we don't optimize NAMED == 1 _if_ we are
            setting any attributes as an error later on would leave
            'obj' changed */
-        if (MAYBE_SHARED(object) || (MAYBE_REFERENCED(object) && nattrs))
+        if (MAYBE_SHARED(object) || (MAYBE_REFERENCED(object) && nattrs) ||
+            ((!IS_ASSIGNMENT_CALL(call)) && MAYBE_REFERENCED(object)))
             object = R_shallow_duplicate_attr(object);
         PROTECT(object);
     }
@@ -1696,7 +1697,7 @@ SEXP attribute_hidden do_attrgets(SEXP call, SEXP op, SEXP args, SEXP env)
 
         PROTECT(value = CADDR(ans));
         obj = CAR(ans);
-        if (MAYBE_SHARED(obj))
+        if (MAYBE_SHARED(obj) || ((!IS_ASSIGNMENT_CALL(call)) && MAYBE_REFERENCED(obj)))
             PROTECT(obj = shallow_duplicate(obj));
         else
             PROTECT(obj);
@@ -1712,7 +1713,7 @@ SEXP attribute_hidden do_attrgets(SEXP call, SEXP op, SEXP args, SEXP env)
         static SEXP do_attrgets_formals = NULL;
 
         obj = CAR(args);
-        if (MAYBE_SHARED(obj))
+        if (MAYBE_SHARED(obj) || ((!IS_ASSIGNMENT_CALL(call)) && MAYBE_REFERENCED(obj)))
             PROTECT(obj = shallow_duplicate(obj));
         else
             PROTECT(obj);
