@@ -2205,6 +2205,7 @@ static SEXP replaceCall(SEXP fun, SEXP val, SEXP args, SEXP rhs)
     SETCAR(ptmp, rhs);
     SET_TAG(ptmp, R_valueSym);
     SET_TYPEOF(tmp, LANGSXP);
+    MARK_ASSIGNMENT_CALL(tmp);
     return tmp;
 }
 
@@ -5793,6 +5794,7 @@ static int tryAssignDispatch(char *generic, SEXP call, SEXP lhs, SEXP rhs, SEXP 
         int label = GETOP();                                                                                           \
         SEXP lhs = GETSTACK(-2);                                                                                       \
         SEXP rhs = GETSTACK(-1);                                                                                       \
+        MARK_ASSIGNMENT_CALL(call);                                                                                    \
         if (MAYBE_SHARED(lhs))                                                                                         \
         {                                                                                                              \
             lhs = shallow_duplicate(lhs);                                                                              \
@@ -5824,6 +5826,7 @@ static int tryAssignDispatch(char *generic, SEXP call, SEXP lhs, SEXP rhs, SEXP 
         SEXP rhs = GETSTACK_BELOW_CALL_FRAME(-2);                                                                      \
         SEXP call = GETSTACK_BELOW_CALL_FRAME(-1);                                                                     \
         SEXP args = BUILTIN_CALL_FRAME_ARGS();                                                                         \
+        MARK_ASSIGNMENT_CALL(call);                                                                                    \
         PUSHCALLARG(rhs);                                                                                              \
         SEXP value = fun(call, symbol, args, rho);                                                                     \
         POP_CALL_FRAME_PLUS(3, value);                                                                                 \
@@ -5861,6 +5864,7 @@ static int tryAssignDispatch(char *generic, SEXP call, SEXP lhs, SEXP rhs, SEXP 
         if (isObject(lhs))                                                                                             \
         {                                                                                                              \
             SEXP call = VECTOR_ELT(constants, callidx);                                                                \
+            MARK_ASSIGNMENT_CALL(call);                                                                                \
             SEXP rhs = GETSTACK(-1);                                                                                   \
             if (MAYBE_SHARED(lhs))                                                                                     \
             {                                                                                                          \
@@ -6336,6 +6340,7 @@ static R_INLINE void VECSUBASSIGN_PTR(SEXP vec, R_bcstack_t *srhs, R_bcstack_t *
     args = CONS_NR(vec, args);
     PROTECT(args);
     SEXP call = callidx < 0 ? consts : VECTOR_ELT(consts, callidx);
+    MARK_ASSIGNMENT_CALL(call);
     if (subassign2)
         vec = do_subassign2_dflt(call, R_Subassign2Sym, args, rho);
     else
@@ -6430,6 +6435,7 @@ static R_INLINE void MATSUBASSIGN_PTR(R_bcstack_t *sx, R_bcstack_t *srhs, R_bcst
     args = CONS_NR(mat, args);
     PROTECT(args);
     SEXP call = callidx < 0 ? consts : VECTOR_ELT(consts, callidx);
+    MARK_ASSIGNMENT_CALL(call);
     if (subassign2)
         mat = do_subassign2_dflt(call, R_Subassign2Sym, args, rho);
     else
@@ -6476,6 +6482,7 @@ static R_INLINE void SUBASSIGN_N_PTR(R_bcstack_t *sx, int rank, R_bcstack_t *srh
     SET_TAG(args, R_valueSym);
     PROTECT(args = CONS_NR(x, addStackArgsList(rank, si, args)));
     SEXP call = callidx < 0 ? consts : VECTOR_ELT(consts, callidx);
+    MARK_ASSIGNMENT_CALL(call);
     if (subassign2)
         x = do_subassign2_dflt(call, R_Subassign2Sym, args, rho);
     else
@@ -7827,6 +7834,7 @@ static SEXP bcEval(SEXP body, SEXP rho, Rboolean useCache)
             SEXP symbol = VECTOR_ELT(constants, GETOP());
             SEXP x = GETSTACK(-2);
             SEXP rhs = GETSTACK(-1);
+            MARK_ASSIGNMENT_CALL(call);
             if (MAYBE_SHARED(x))
             {
                 x = shallow_duplicate(x);
@@ -7993,6 +8001,7 @@ static SEXP bcEval(SEXP body, SEXP rho, Rboolean useCache)
             SEXP call = VECTOR_ELT(constants, GETOP());
             SEXP vexpr = VECTOR_ELT(constants, GETOP());
             SEXP args, prom, last;
+            MARK_ASSIGNMENT_CALL(call);
             if (MAYBE_SHARED(lhs))
             {
                 lhs = shallow_duplicate(lhs);
