@@ -3978,6 +3978,14 @@ void(SET_ASSIGNMENT_PENDING)(SEXP x, int v)
 {
     SET_ASSIGNMENT_PENDING(CHK(x), v);
 }
+int(IS_ASSIGNMENT_CALL)(SEXP x)
+{
+    return IS_ASSIGNMENT_CALL(CHK(x));
+}
+void(MARK_ASSIGNMENT_CALL)(SEXP x)
+{
+    MARK_ASSIGNMENT_CALL(CHK(x));
+}
 
 void(SET_ATTRIB)(SEXP x, SEXP v)
 {
